--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "flow": "flow"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -23,6 +24,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "flow-bin": "^0.82.0",
     "prettier": "1.14.3"
   }
 }
