--- a/package.json
+++ b/package.json
@@ -2,30 +2,30 @@
   "name": "100-pushups",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "flow": "flow",
+    "start": "react-scripts start",
+    "test": "react-scripts test"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.4",
     "styled-components": "^3.4.9"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "flow": "flow"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+  "devDependencies": {
+    "flow-bin": "^0.82.0",
+    "prettier": "1.14.3"
   },
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "flow-bin": "^0.82.0",
-    "prettier": "1.14.3"
-  }
+  ]
 }
